Fix home image on mobile

--- a/sass/parts/_home-banner.scss
+++ b/sass/parts/_home-banner.scss
@@ -72,6 +72,7 @@
 
     .image-container-home {
         width: 95%;
+        border-radius: 100%;
     }
 
     #home-banner-text {
